fix(web): many item view related issues
Squashed commit of the following:

commit 1c0342414e87e3ae992c1f42dee20b9851606dc4
Author: Adam Butler <ab@adam-butler.com>
Date:   Wed Dec 11 17:57:21 2024 +0100

    loads of web improvements

commit 65d61a93adbfb789edcd5eae3dd1ea1b4db794ab
Author: Adam Butler <ab@adam-butler.com>
Date:   Thu Dec 5 18:11:54 2024 +0100

    get newsletter if that's what it is

--- a/public/css/output.scss
+++ b/public/css/output.scss
@@ -169,6 +169,7 @@ $ui: (
   logo1: hsl(186, 50%, 40%),
   logo2: hsl(360, 70%, 60%),
   logo3: hsl(260, 30%, 30%),
+  logo4: hsl(19, 26%, 52%),
 );
 $darkMode: (
   black: hsl(0, 0%, 100%),
@@ -186,6 +187,7 @@ $darkMode: (
   logo1: hsl(186, 40%, 30%),
   logo2: hsl(360, 70%, 60%),
   logo3: hsl(260, 30%, 30%),
+  logo4: hsl(19, 26%, 52%),
 );
 $step: 28px;
 $margin: 3vmin;
@@ -395,7 +397,7 @@ body {
 
     @media (min-width: 600px) {
       left: calc(50% - 50vw);
-      // margin: 0;
+      margin-right: calc(50% - 50vw) !important;
     }
   }
 
@@ -526,48 +528,53 @@ body {
     margin: 0 0 1rem;
     font-size: 0.55rem;
     line-height: 1rem;
-    background-color: rgba(255, 255, 255, 0.5);
-    left: -0.5rem;
-    width: 100vw;
-    padding: 1rem .5rem;
-    display: block;
+    // background-color: rgba(255, 255, 255, 0.5);
+    // left: -0.5rem;
+    // width: 100vw;
+    padding: 1rem 0;
+    // display: block;
     position: relative;
     -webkit-hyphens: none;
     hyphens: none;
 
     blockquote, .pullquote, aside {
       margin: 0;
-      padding: 0;
-      left: 0;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      position: relative;
     }
 
     & > p:last-of-type {
       margin-bottom: 0;
     }
 
-    @media (min-width: 600px) {
-      & {
-        width: 100%;
-      }
-    }
+    // @media (min-width: 600px) {
+    //   & {
+    //     width: 100%;
+    //   }
+    // }
 
     &.is-quote p:first-child {
       text-indent: -0.45em;
+    }
+
+    &::after {
+      content: "";
+      display: block;
+      background-color: rgba(255, 255, 255, 0.5);
+      width: 100vw;
+      height: 100%;
+      left: calc(50% - 50vw);
+      position: absolute;
+      z-index: -1;
+      top: 0;
     }
   }
 
   .pullquote, aside {
     color: white;
     &::after {
-      content: "";
-      display: block;
       background-color: var(--feed-color);
-      width: 100vh;
-      height: 100%;
-      margin-left: calc(50% - 50vh);
-      position: absolute;
-      z-index: -1;
-      top: 0;
     }
   }
 
@@ -615,33 +622,33 @@ body {
     }
   }
 
-  @media (min-width: 600px) {
-    figcaption, blockquote, .caption, img + small {
-      margin: 0 -4vw;
-      padding: 1rem 4vw;
-      left: 0;
-    }
-    figcaption, .caption, img + small {
-      padding: .25rem calc(50vw - 50%) .5rem;
-      margin: 0 4vw;
-      text-align: center;
-    }
-  }
+  // @media (min-width: 600px) {
+  //   figcaption, blockquote, .caption, img + small {
+  //     margin: 0 -4vw;
+  //     padding: 1rem 4vw;
+  //     left: 0;
+  //   }
+  //   figcaption, .caption, img + small {
+  //     padding: .25rem calc(50vw - 50%) .5rem;
+  //     margin: 0 4vw;
+  //     text-align: center;
+  //   }
+  // }
 
   img + small {
     display: block;
     margin: -2.25rem -4vw 1rem;
   }
 
-  blockquote:not(.pullquote) {
-    @media (min-width: 600px) {
-      margin-bottom: 1rem;
-      left: calc(50% - 50vw);
-      margin: 0 0 1rem;
-      padding: 1rem calc(50vw - 50%);
-      width: 100vw;
-    }
-  }
+  // blockquote:not(.pullquote) {
+  //   @media (min-width: 600px) {
+  //     margin-bottom: 1rem;
+  //     left: calc(50% - 50vw);
+  //     margin: 0 0 1rem;
+  //     padding: 1rem calc(50vw - 50%);
+  //     width: 100vw;
+  //   }
+  // }
 
   // fade on scroll
   // blockquote, figure {
@@ -1122,7 +1129,30 @@ hr {
   }
 
   @include firstLineFontFamily("IowanOldStyle-Bold, Cardo-Bold");
-  @include firstShortParaBold("IowanOldStyle-Bold, Cardo-Bold", "IowanOldStyle-BoldItalic, Cardo-Bold")
+  @include firstShortParaBold("IowanOldStyle-Bold, Cardo-Bold", "IowanOldStyle-BoldItalic, Cardo-Bold");
+
+  .android &, .web & {
+    font-family: "LibreBaskerville-Regular", serif;
+
+    em, i {
+      font-family: "LibreBaskerville-Italic", sans-serif;
+      font-style: normal;
+    }
+  
+    strong, b {
+      font-family: "LibreBaskerville-Bold", sans-serif;
+      font-weight: normal;
+    }
+  
+    strong em, em strong, b i, i b {
+      font-family: "LibreBaskerville-BoldItalic", sans-serif;
+      font-style: normal;
+      font-weight: normal;
+    }
+  
+    @include firstLineFontFamily("LibreBaskerville-Bold");
+    @include firstShortParaBold("LibreBaskerville-Bold", "LibreBaskerville-BoldItalic")  
+  }
 }
 
 .bodyFontSans2 {
@@ -1775,10 +1805,11 @@ body .itemArticle.dropCapIsMonochrome > p:not(.short-para):first-of-type:first-l
   //   padding: 0;
   // }
 
+  // not sure why I added this, but its causing a lot of images to be hidden
   td.content {
     & > div:first-of-type {
       table:first-of-type {
-        display: none;
+        // display: none;
       }
     }
   }
@@ -2129,13 +2160,14 @@ html.onboarding.onboarding-2:not(.dark-background) body {
     position: absolute;
     bottom: 0;
     top: auto;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 
-    &.center {
+    &.center h1 {
       text-align: center;
-      left: 50%;
-      transform: translateX(-50%);
       width: 80%;
-      max-width: 1000px;
+      max-width: 900px;
     }
 
     &.top {
@@ -2154,8 +2186,9 @@ html.onboarding.onboarding-2:not(.dark-background) body {
     position: absolute;
     top: 0;
     left: 0;
-    margin: 0 -4vw 2rem;
-    width: calc(100vw + 4vw);
+    margin-bottom: 2rem;
+    // not sure why that 4vw was there?
+    width: calc(100vw/* + 4vw*/);
     height: calc(100% + 2rem);
     z-index: -1;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 40%, rgba(0, 0, 0, 0.3) 80%, rgba(0, 0, 0, 0) 100%);
@@ -2163,7 +2196,8 @@ html.onboarding.onboarding-2:not(.dark-background) body {
 
   @media screen and (min-width: 32rem) {
     .itemTitle {
-      margin: 1rem;
+      padding: 1rem;
+      margin: 0;
     }
   }
   
@@ -2211,17 +2245,19 @@ html.onboarding.onboarding-2:not(.dark-background) body {
       margin: 0;
     }
     
-    blockquote:not(.pullquote) {
-      margin-bottom: 1rem;
-      left: calc(50% - 50vw);
-      margin: 0 -4vw 1rem;
-      padding: 1rem calc(50vw - 50% + 4vw);
-      width: 100vw;
-    }
-
     table, th, td {
       max-width: 28rem !important;
     }
+
+    img.img-portrait:not(.img-tiny), img.img-small {
+      width: 100% !important;
+      margin: 1rem 0 !important;
+      left: 0;
+    }
+  }
+
+  input:focus {
+    outline: 1px solid rgba(255,255,255,0.3);
   }
 }
 
